# Vega3D

./: Cargo.toml  Documentation.md  LICENSE  README.md
include/: vega3d.h  vegaimpls.h
src/: main.rs  main.wgsl  system.rs  util.h  util.rs
src/resource/: fsresource.c
src/script/: cfuncscript.c  luascript.c
src/system/: bindings.rs  buffer.rs  pipeline.rs  texture.rs  window.rs
