[package]
name = "Vega3D"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bytemuck = "1.20.0"
derive_builder = "0.20.2"
gilrs = "0.11.0"
noise = "0.9.0"
parking_lot = "0.12.3"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.42.0", features = ["rt"] }
wgpu = { version = "23.0.1", features = ["serde"] }
winit = "0.30.5"
